// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BirthDayField Match snapshot 1`] = `
<div>
  <p
    class="text-tremor-default text-grey text-sm dark:text-lighter capitalize after:content-['*'] after:text-red-500 after:text-md"
  >
    Birth date
  </p>
  <div
    class="flex flex-col md:flex-row gap-6"
  >
    <div
      class="w-full"
    >
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          title="select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select Year
          </option>
          <option
            class="hidden"
            value="1900"
          >
            1900
          </option>
          <option
            class="hidden"
            value="1901"
          >
            1901
          </option>
          <option
            class="hidden"
            value="1902"
          >
            1902
          </option>
          <option
            class="hidden"
            value="1903"
          >
            1903
          </option>
          <option
            class="hidden"
            value="1904"
          >
            1904
          </option>
          <option
            class="hidden"
            value="1905"
          >
            1905
          </option>
          <option
            class="hidden"
            value="1906"
          >
            1906
          </option>
          <option
            class="hidden"
            value="1907"
          >
            1907
          </option>
          <option
            class="hidden"
            value="1908"
          >
            1908
          </option>
          <option
            class="hidden"
            value="1909"
          >
            1909
          </option>
          <option
            class="hidden"
            value="1910"
          >
            1910
          </option>
          <option
            class="hidden"
            value="1911"
          >
            1911
          </option>
          <option
            class="hidden"
            value="1912"
          >
            1912
          </option>
          <option
            class="hidden"
            value="1913"
          >
            1913
          </option>
          <option
            class="hidden"
            value="1914"
          >
            1914
          </option>
          <option
            class="hidden"
            value="1915"
          >
            1915
          </option>
          <option
            class="hidden"
            value="1916"
          >
            1916
          </option>
          <option
            class="hidden"
            value="1917"
          >
            1917
          </option>
          <option
            class="hidden"
            value="1918"
          >
            1918
          </option>
          <option
            class="hidden"
            value="1919"
          >
            1919
          </option>
          <option
            class="hidden"
            value="1920"
          >
            1920
          </option>
          <option
            class="hidden"
            value="1921"
          >
            1921
          </option>
          <option
            class="hidden"
            value="1922"
          >
            1922
          </option>
          <option
            class="hidden"
            value="1923"
          >
            1923
          </option>
          <option
            class="hidden"
            value="1924"
          >
            1924
          </option>
          <option
            class="hidden"
            value="1925"
          >
            1925
          </option>
          <option
            class="hidden"
            value="1926"
          >
            1926
          </option>
          <option
            class="hidden"
            value="1927"
          >
            1927
          </option>
          <option
            class="hidden"
            value="1928"
          >
            1928
          </option>
          <option
            class="hidden"
            value="1929"
          >
            1929
          </option>
          <option
            class="hidden"
            value="1930"
          >
            1930
          </option>
          <option
            class="hidden"
            value="1931"
          >
            1931
          </option>
          <option
            class="hidden"
            value="1932"
          >
            1932
          </option>
          <option
            class="hidden"
            value="1933"
          >
            1933
          </option>
          <option
            class="hidden"
            value="1934"
          >
            1934
          </option>
          <option
            class="hidden"
            value="1935"
          >
            1935
          </option>
          <option
            class="hidden"
            value="1936"
          >
            1936
          </option>
          <option
            class="hidden"
            value="1937"
          >
            1937
          </option>
          <option
            class="hidden"
            value="1938"
          >
            1938
          </option>
          <option
            class="hidden"
            value="1939"
          >
            1939
          </option>
          <option
            class="hidden"
            value="1940"
          >
            1940
          </option>
          <option
            class="hidden"
            value="1941"
          >
            1941
          </option>
          <option
            class="hidden"
            value="1942"
          >
            1942
          </option>
          <option
            class="hidden"
            value="1943"
          >
            1943
          </option>
          <option
            class="hidden"
            value="1944"
          >
            1944
          </option>
          <option
            class="hidden"
            value="1945"
          >
            1945
          </option>
          <option
            class="hidden"
            value="1946"
          >
            1946
          </option>
          <option
            class="hidden"
            value="1947"
          >
            1947
          </option>
          <option
            class="hidden"
            value="1948"
          >
            1948
          </option>
          <option
            class="hidden"
            value="1949"
          >
            1949
          </option>
          <option
            class="hidden"
            value="1950"
          >
            1950
          </option>
          <option
            class="hidden"
            value="1951"
          >
            1951
          </option>
          <option
            class="hidden"
            value="1952"
          >
            1952
          </option>
          <option
            class="hidden"
            value="1953"
          >
            1953
          </option>
          <option
            class="hidden"
            value="1954"
          >
            1954
          </option>
          <option
            class="hidden"
            value="1955"
          >
            1955
          </option>
          <option
            class="hidden"
            value="1956"
          >
            1956
          </option>
          <option
            class="hidden"
            value="1957"
          >
            1957
          </option>
          <option
            class="hidden"
            value="1958"
          >
            1958
          </option>
          <option
            class="hidden"
            value="1959"
          >
            1959
          </option>
          <option
            class="hidden"
            value="1960"
          >
            1960
          </option>
          <option
            class="hidden"
            value="1961"
          >
            1961
          </option>
          <option
            class="hidden"
            value="1962"
          >
            1962
          </option>
          <option
            class="hidden"
            value="1963"
          >
            1963
          </option>
          <option
            class="hidden"
            value="1964"
          >
            1964
          </option>
          <option
            class="hidden"
            value="1965"
          >
            1965
          </option>
          <option
            class="hidden"
            value="1966"
          >
            1966
          </option>
          <option
            class="hidden"
            value="1967"
          >
            1967
          </option>
          <option
            class="hidden"
            value="1968"
          >
            1968
          </option>
          <option
            class="hidden"
            value="1969"
          >
            1969
          </option>
          <option
            class="hidden"
            value="1970"
          >
            1970
          </option>
          <option
            class="hidden"
            value="1971"
          >
            1971
          </option>
          <option
            class="hidden"
            value="1972"
          >
            1972
          </option>
          <option
            class="hidden"
            value="1973"
          >
            1973
          </option>
          <option
            class="hidden"
            value="1974"
          >
            1974
          </option>
          <option
            class="hidden"
            value="1975"
          >
            1975
          </option>
          <option
            class="hidden"
            value="1976"
          >
            1976
          </option>
          <option
            class="hidden"
            value="1977"
          >
            1977
          </option>
          <option
            class="hidden"
            value="1978"
          >
            1978
          </option>
          <option
            class="hidden"
            value="1979"
          >
            1979
          </option>
          <option
            class="hidden"
            value="1980"
          >
            1980
          </option>
          <option
            class="hidden"
            value="1981"
          >
            1981
          </option>
          <option
            class="hidden"
            value="1982"
          >
            1982
          </option>
          <option
            class="hidden"
            value="1983"
          >
            1983
          </option>
          <option
            class="hidden"
            value="1984"
          >
            1984
          </option>
          <option
            class="hidden"
            value="1985"
          >
            1985
          </option>
          <option
            class="hidden"
            value="1986"
          >
            1986
          </option>
          <option
            class="hidden"
            value="1987"
          >
            1987
          </option>
          <option
            class="hidden"
            value="1988"
          >
            1988
          </option>
          <option
            class="hidden"
            value="1989"
          >
            1989
          </option>
          <option
            class="hidden"
            value="1990"
          >
            1990
          </option>
          <option
            class="hidden"
            value="1991"
          >
            1991
          </option>
          <option
            class="hidden"
            value="1992"
          >
            1992
          </option>
          <option
            class="hidden"
            value="1993"
          >
            1993
          </option>
          <option
            class="hidden"
            value="1994"
          >
            1994
          </option>
          <option
            class="hidden"
            value="1995"
          >
            1995
          </option>
          <option
            class="hidden"
            value="1996"
          >
            1996
          </option>
          <option
            class="hidden"
            value="1997"
          >
            1997
          </option>
          <option
            class="hidden"
            value="1998"
          >
            1998
          </option>
          <option
            class="hidden"
            value="1999"
          >
            1999
          </option>
          <option
            class="hidden"
            value="2000"
          >
            2000
          </option>
          <option
            class="hidden"
            value="2001"
          >
            2001
          </option>
          <option
            class="hidden"
            value="2002"
          >
            2002
          </option>
          <option
            class="hidden"
            value="2003"
          >
            2003
          </option>
          <option
            class="hidden"
            value="2004"
          >
            2004
          </option>
          <option
            class="hidden"
            value="2005"
          >
            2005
          </option>
          <option
            class="hidden"
            value="2006"
          >
            2006
          </option>
          <option
            class="hidden"
            value="2007"
          >
            2007
          </option>
          <option
            class="hidden"
            value="2008"
          >
            2008
          </option>
          <option
            class="hidden"
            value="2009"
          >
            2009
          </option>
          <option
            class="hidden"
            value="2010"
          >
            2010
          </option>
          <option
            class="hidden"
            value="2011"
          >
            2011
          </option>
          <option
            class="hidden"
            value="2012"
          >
            2012
          </option>
          <option
            class="hidden"
            value="2013"
          >
            2013
          </option>
          <option
            class="hidden"
            value="2014"
          >
            2014
          </option>
          <option
            class="hidden"
            value="2015"
          >
            2015
          </option>
          <option
            class="hidden"
            value="2016"
          >
            2016
          </option>
          <option
            class="hidden"
            value="2017"
          >
            2017
          </option>
          <option
            class="hidden"
            value="2018"
          >
            2018
          </option>
          <option
            class="hidden"
            value="2019"
          >
            2019
          </option>
          <option
            class="hidden"
            value="2020"
          >
            2020
          </option>
          <option
            class="hidden"
            value="2021"
          >
            2021
          </option>
          <option
            class="hidden"
            value="2022"
          >
            2022
          </option>
          <option
            class="hidden"
            value="2023"
          >
            2023
          </option>
          <option
            class="hidden"
            value="2024"
          >
            2024
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
          data-testid="year"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r0:"
            type="button"
          >
            <span
              class="w-[90%] block truncate"
            >
              2001
            </span>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-3"
            >
              <svg
                class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          title="select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select Month
          </option>
          <option
            class="hidden"
            value="0"
          >
            January
          </option>
          <option
            class="hidden"
            value="1"
          >
            February
          </option>
          <option
            class="hidden"
            value="2"
          >
            March
          </option>
          <option
            class="hidden"
            value="3"
          >
            April
          </option>
          <option
            class="hidden"
            value="4"
          >
            May
          </option>
          <option
            class="hidden"
            value="5"
          >
            June
          </option>
          <option
            class="hidden"
            value="6"
          >
            July
          </option>
          <option
            class="hidden"
            value="7"
          >
            August
          </option>
          <option
            class="hidden"
            value="8"
          >
            September
          </option>
          <option
            class="hidden"
            value="9"
          >
            October
          </option>
          <option
            class="hidden"
            value="10"
          >
            November
          </option>
          <option
            class="hidden"
            value="11"
          >
            December
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
          data-testid="month"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r1:"
            type="button"
          >
            <span
              class="w-[90%] block truncate"
            >
              February
            </span>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-3"
            >
              <svg
                class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          title="select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select Day
          </option>
          <option
            class="hidden"
            value="1"
          >
            1
          </option>
          <option
            class="hidden"
            value="2"
          >
            2
          </option>
          <option
            class="hidden"
            value="3"
          >
            3
          </option>
          <option
            class="hidden"
            value="4"
          >
            4
          </option>
          <option
            class="hidden"
            value="5"
          >
            5
          </option>
          <option
            class="hidden"
            value="6"
          >
            6
          </option>
          <option
            class="hidden"
            value="7"
          >
            7
          </option>
          <option
            class="hidden"
            value="8"
          >
            8
          </option>
          <option
            class="hidden"
            value="9"
          >
            9
          </option>
          <option
            class="hidden"
            value="10"
          >
            10
          </option>
          <option
            class="hidden"
            value="11"
          >
            11
          </option>
          <option
            class="hidden"
            value="12"
          >
            12
          </option>
          <option
            class="hidden"
            value="13"
          >
            13
          </option>
          <option
            class="hidden"
            value="14"
          >
            14
          </option>
          <option
            class="hidden"
            value="15"
          >
            15
          </option>
          <option
            class="hidden"
            value="16"
          >
            16
          </option>
          <option
            class="hidden"
            value="17"
          >
            17
          </option>
          <option
            class="hidden"
            value="18"
          >
            18
          </option>
          <option
            class="hidden"
            value="19"
          >
            19
          </option>
          <option
            class="hidden"
            value="20"
          >
            20
          </option>
          <option
            class="hidden"
            value="21"
          >
            21
          </option>
          <option
            class="hidden"
            value="22"
          >
            22
          </option>
          <option
            class="hidden"
            value="23"
          >
            23
          </option>
          <option
            class="hidden"
            value="24"
          >
            24
          </option>
          <option
            class="hidden"
            value="25"
          >
            25
          </option>
          <option
            class="hidden"
            value="26"
          >
            26
          </option>
          <option
            class="hidden"
            value="27"
          >
            27
          </option>
          <option
            class="hidden"
            value="28"
          >
            28
          </option>
          <option
            class="hidden"
            value="29"
          >
            29
          </option>
          <option
            class="hidden"
            value="30"
          >
            30
          </option>
          <option
            class="hidden"
            value="31"
          >
            31
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
          data-testid="date"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r2:"
            type="button"
          >
            <span
              class="w-[90%] block truncate"
            >
              26
            </span>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-3"
            >
              <svg
                class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`BirthDayField Match snapshot with empty value 1`] = `
<div>
  <p
    class="text-tremor-default text-grey text-sm dark:text-lighter capitalize"
  >
    Birth date
  </p>
  <div
    class="flex flex-col md:flex-row gap-6"
  >
    <div
      class="w-full"
    >
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          title="select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select Year
          </option>
          <option
            class="hidden"
            value="1900"
          >
            1900
          </option>
          <option
            class="hidden"
            value="1901"
          >
            1901
          </option>
          <option
            class="hidden"
            value="1902"
          >
            1902
          </option>
          <option
            class="hidden"
            value="1903"
          >
            1903
          </option>
          <option
            class="hidden"
            value="1904"
          >
            1904
          </option>
          <option
            class="hidden"
            value="1905"
          >
            1905
          </option>
          <option
            class="hidden"
            value="1906"
          >
            1906
          </option>
          <option
            class="hidden"
            value="1907"
          >
            1907
          </option>
          <option
            class="hidden"
            value="1908"
          >
            1908
          </option>
          <option
            class="hidden"
            value="1909"
          >
            1909
          </option>
          <option
            class="hidden"
            value="1910"
          >
            1910
          </option>
          <option
            class="hidden"
            value="1911"
          >
            1911
          </option>
          <option
            class="hidden"
            value="1912"
          >
            1912
          </option>
          <option
            class="hidden"
            value="1913"
          >
            1913
          </option>
          <option
            class="hidden"
            value="1914"
          >
            1914
          </option>
          <option
            class="hidden"
            value="1915"
          >
            1915
          </option>
          <option
            class="hidden"
            value="1916"
          >
            1916
          </option>
          <option
            class="hidden"
            value="1917"
          >
            1917
          </option>
          <option
            class="hidden"
            value="1918"
          >
            1918
          </option>
          <option
            class="hidden"
            value="1919"
          >
            1919
          </option>
          <option
            class="hidden"
            value="1920"
          >
            1920
          </option>
          <option
            class="hidden"
            value="1921"
          >
            1921
          </option>
          <option
            class="hidden"
            value="1922"
          >
            1922
          </option>
          <option
            class="hidden"
            value="1923"
          >
            1923
          </option>
          <option
            class="hidden"
            value="1924"
          >
            1924
          </option>
          <option
            class="hidden"
            value="1925"
          >
            1925
          </option>
          <option
            class="hidden"
            value="1926"
          >
            1926
          </option>
          <option
            class="hidden"
            value="1927"
          >
            1927
          </option>
          <option
            class="hidden"
            value="1928"
          >
            1928
          </option>
          <option
            class="hidden"
            value="1929"
          >
            1929
          </option>
          <option
            class="hidden"
            value="1930"
          >
            1930
          </option>
          <option
            class="hidden"
            value="1931"
          >
            1931
          </option>
          <option
            class="hidden"
            value="1932"
          >
            1932
          </option>
          <option
            class="hidden"
            value="1933"
          >
            1933
          </option>
          <option
            class="hidden"
            value="1934"
          >
            1934
          </option>
          <option
            class="hidden"
            value="1935"
          >
            1935
          </option>
          <option
            class="hidden"
            value="1936"
          >
            1936
          </option>
          <option
            class="hidden"
            value="1937"
          >
            1937
          </option>
          <option
            class="hidden"
            value="1938"
          >
            1938
          </option>
          <option
            class="hidden"
            value="1939"
          >
            1939
          </option>
          <option
            class="hidden"
            value="1940"
          >
            1940
          </option>
          <option
            class="hidden"
            value="1941"
          >
            1941
          </option>
          <option
            class="hidden"
            value="1942"
          >
            1942
          </option>
          <option
            class="hidden"
            value="1943"
          >
            1943
          </option>
          <option
            class="hidden"
            value="1944"
          >
            1944
          </option>
          <option
            class="hidden"
            value="1945"
          >
            1945
          </option>
          <option
            class="hidden"
            value="1946"
          >
            1946
          </option>
          <option
            class="hidden"
            value="1947"
          >
            1947
          </option>
          <option
            class="hidden"
            value="1948"
          >
            1948
          </option>
          <option
            class="hidden"
            value="1949"
          >
            1949
          </option>
          <option
            class="hidden"
            value="1950"
          >
            1950
          </option>
          <option
            class="hidden"
            value="1951"
          >
            1951
          </option>
          <option
            class="hidden"
            value="1952"
          >
            1952
          </option>
          <option
            class="hidden"
            value="1953"
          >
            1953
          </option>
          <option
            class="hidden"
            value="1954"
          >
            1954
          </option>
          <option
            class="hidden"
            value="1955"
          >
            1955
          </option>
          <option
            class="hidden"
            value="1956"
          >
            1956
          </option>
          <option
            class="hidden"
            value="1957"
          >
            1957
          </option>
          <option
            class="hidden"
            value="1958"
          >
            1958
          </option>
          <option
            class="hidden"
            value="1959"
          >
            1959
          </option>
          <option
            class="hidden"
            value="1960"
          >
            1960
          </option>
          <option
            class="hidden"
            value="1961"
          >
            1961
          </option>
          <option
            class="hidden"
            value="1962"
          >
            1962
          </option>
          <option
            class="hidden"
            value="1963"
          >
            1963
          </option>
          <option
            class="hidden"
            value="1964"
          >
            1964
          </option>
          <option
            class="hidden"
            value="1965"
          >
            1965
          </option>
          <option
            class="hidden"
            value="1966"
          >
            1966
          </option>
          <option
            class="hidden"
            value="1967"
          >
            1967
          </option>
          <option
            class="hidden"
            value="1968"
          >
            1968
          </option>
          <option
            class="hidden"
            value="1969"
          >
            1969
          </option>
          <option
            class="hidden"
            value="1970"
          >
            1970
          </option>
          <option
            class="hidden"
            value="1971"
          >
            1971
          </option>
          <option
            class="hidden"
            value="1972"
          >
            1972
          </option>
          <option
            class="hidden"
            value="1973"
          >
            1973
          </option>
          <option
            class="hidden"
            value="1974"
          >
            1974
          </option>
          <option
            class="hidden"
            value="1975"
          >
            1975
          </option>
          <option
            class="hidden"
            value="1976"
          >
            1976
          </option>
          <option
            class="hidden"
            value="1977"
          >
            1977
          </option>
          <option
            class="hidden"
            value="1978"
          >
            1978
          </option>
          <option
            class="hidden"
            value="1979"
          >
            1979
          </option>
          <option
            class="hidden"
            value="1980"
          >
            1980
          </option>
          <option
            class="hidden"
            value="1981"
          >
            1981
          </option>
          <option
            class="hidden"
            value="1982"
          >
            1982
          </option>
          <option
            class="hidden"
            value="1983"
          >
            1983
          </option>
          <option
            class="hidden"
            value="1984"
          >
            1984
          </option>
          <option
            class="hidden"
            value="1985"
          >
            1985
          </option>
          <option
            class="hidden"
            value="1986"
          >
            1986
          </option>
          <option
            class="hidden"
            value="1987"
          >
            1987
          </option>
          <option
            class="hidden"
            value="1988"
          >
            1988
          </option>
          <option
            class="hidden"
            value="1989"
          >
            1989
          </option>
          <option
            class="hidden"
            value="1990"
          >
            1990
          </option>
          <option
            class="hidden"
            value="1991"
          >
            1991
          </option>
          <option
            class="hidden"
            value="1992"
          >
            1992
          </option>
          <option
            class="hidden"
            value="1993"
          >
            1993
          </option>
          <option
            class="hidden"
            value="1994"
          >
            1994
          </option>
          <option
            class="hidden"
            value="1995"
          >
            1995
          </option>
          <option
            class="hidden"
            value="1996"
          >
            1996
          </option>
          <option
            class="hidden"
            value="1997"
          >
            1997
          </option>
          <option
            class="hidden"
            value="1998"
          >
            1998
          </option>
          <option
            class="hidden"
            value="1999"
          >
            1999
          </option>
          <option
            class="hidden"
            value="2000"
          >
            2000
          </option>
          <option
            class="hidden"
            value="2001"
          >
            2001
          </option>
          <option
            class="hidden"
            value="2002"
          >
            2002
          </option>
          <option
            class="hidden"
            value="2003"
          >
            2003
          </option>
          <option
            class="hidden"
            value="2004"
          >
            2004
          </option>
          <option
            class="hidden"
            value="2005"
          >
            2005
          </option>
          <option
            class="hidden"
            value="2006"
          >
            2006
          </option>
          <option
            class="hidden"
            value="2007"
          >
            2007
          </option>
          <option
            class="hidden"
            value="2008"
          >
            2008
          </option>
          <option
            class="hidden"
            value="2009"
          >
            2009
          </option>
          <option
            class="hidden"
            value="2010"
          >
            2010
          </option>
          <option
            class="hidden"
            value="2011"
          >
            2011
          </option>
          <option
            class="hidden"
            value="2012"
          >
            2012
          </option>
          <option
            class="hidden"
            value="2013"
          >
            2013
          </option>
          <option
            class="hidden"
            value="2014"
          >
            2014
          </option>
          <option
            class="hidden"
            value="2015"
          >
            2015
          </option>
          <option
            class="hidden"
            value="2016"
          >
            2016
          </option>
          <option
            class="hidden"
            value="2017"
          >
            2017
          </option>
          <option
            class="hidden"
            value="2018"
          >
            2018
          </option>
          <option
            class="hidden"
            value="2019"
          >
            2019
          </option>
          <option
            class="hidden"
            value="2020"
          >
            2020
          </option>
          <option
            class="hidden"
            value="2021"
          >
            2021
          </option>
          <option
            class="hidden"
            value="2022"
          >
            2022
          </option>
          <option
            class="hidden"
            value="2023"
          >
            2023
          </option>
          <option
            class="hidden"
            value="2024"
          >
            2024
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
          data-testid="year"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r3:"
            type="button"
          >
            <span
              class="w-[90%] block truncate"
            >
              Select Year
            </span>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-3"
            >
              <svg
                class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          title="select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select Month
          </option>
          <option
            class="hidden"
            value="0"
          >
            January
          </option>
          <option
            class="hidden"
            value="1"
          >
            February
          </option>
          <option
            class="hidden"
            value="2"
          >
            March
          </option>
          <option
            class="hidden"
            value="3"
          >
            April
          </option>
          <option
            class="hidden"
            value="4"
          >
            May
          </option>
          <option
            class="hidden"
            value="5"
          >
            June
          </option>
          <option
            class="hidden"
            value="6"
          >
            July
          </option>
          <option
            class="hidden"
            value="7"
          >
            August
          </option>
          <option
            class="hidden"
            value="8"
          >
            September
          </option>
          <option
            class="hidden"
            value="9"
          >
            October
          </option>
          <option
            class="hidden"
            value="10"
          >
            November
          </option>
          <option
            class="hidden"
            value="11"
          >
            December
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
          data-testid="month"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content dark:text-dark-tremor-content border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r4:"
            type="button"
          >
            <span
              class="w-[90%] block truncate"
            >
              Select Month
            </span>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-3"
            >
              <svg
                class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        class="w-full min-w-[10rem] relative text-tremor-default"
      >
        <select
          class="h-full w-full absolute left-0 top-0 z-0 opacity-0"
          title="select-hidden"
        >
          <option
            class="hidden"
            disabled=""
            hidden=""
            value=""
          >
            Select Day
          </option>
          <option
            class="hidden"
            value="1"
          >
            1
          </option>
          <option
            class="hidden"
            value="2"
          >
            2
          </option>
          <option
            class="hidden"
            value="3"
          >
            3
          </option>
          <option
            class="hidden"
            value="4"
          >
            4
          </option>
          <option
            class="hidden"
            value="5"
          >
            5
          </option>
          <option
            class="hidden"
            value="6"
          >
            6
          </option>
          <option
            class="hidden"
            value="7"
          >
            7
          </option>
          <option
            class="hidden"
            value="8"
          >
            8
          </option>
          <option
            class="hidden"
            value="9"
          >
            9
          </option>
          <option
            class="hidden"
            value="10"
          >
            10
          </option>
          <option
            class="hidden"
            value="11"
          >
            11
          </option>
          <option
            class="hidden"
            value="12"
          >
            12
          </option>
          <option
            class="hidden"
            value="13"
          >
            13
          </option>
          <option
            class="hidden"
            value="14"
          >
            14
          </option>
          <option
            class="hidden"
            value="15"
          >
            15
          </option>
          <option
            class="hidden"
            value="16"
          >
            16
          </option>
          <option
            class="hidden"
            value="17"
          >
            17
          </option>
          <option
            class="hidden"
            value="18"
          >
            18
          </option>
          <option
            class="hidden"
            value="19"
          >
            19
          </option>
          <option
            class="hidden"
            value="20"
          >
            20
          </option>
          <option
            class="hidden"
            value="21"
          >
            21
          </option>
          <option
            class="hidden"
            value="22"
          >
            22
          </option>
          <option
            class="hidden"
            value="23"
          >
            23
          </option>
          <option
            class="hidden"
            value="24"
          >
            24
          </option>
          <option
            class="hidden"
            value="25"
          >
            25
          </option>
          <option
            class="hidden"
            value="26"
          >
            26
          </option>
          <option
            class="hidden"
            value="27"
          >
            27
          </option>
          <option
            class="hidden"
            value="28"
          >
            28
          </option>
          <option
            class="hidden"
            value="29"
          >
            29
          </option>
          <option
            class="hidden"
            value="30"
          >
            30
          </option>
          <option
            class="hidden"
            value="31"
          >
            31
          </option>
        </select>
        <div
          class="w-full min-w-[10rem] relative text-tremor-default select-custom text-grey dark:text-white dark:border-light dark:focus:border-white"
          data-headlessui-state=""
          data-testid="date"
        >
          <button
            aria-expanded="false"
            aria-haspopup="listbox"
            class="w-full outline-none text-left whitespace-nowrap truncate rounded-tremor-default focus:ring-2 transition duration-100 border pr-8 py-2 shadow-tremor-input focus:border-tremor-brand-subtle focus:ring-tremor-brand-muted dark:shadow-dark-tremor-input dark:focus:border-dark-tremor-brand-subtle dark:focus:ring-dark-tremor-brand-muted pl-3 bg-tremor-background dark:bg-dark-tremor-background hover:bg-tremor-background-muted dark:hover:bg-dark-tremor-background-muted text-tremor-content-emphasis dark:text-dark-tremor-content-emphasis border-tremor-border dark:border-dark-tremor-border"
            data-headlessui-state=""
            id="headlessui-listbox-button-:r5:"
            type="button"
          >
            <span
              class="w-[90%] block truncate"
            >
              Select Day
            </span>
            <span
              class="absolute inset-y-0 right-0 flex items-center mr-3"
            >
              <svg
                class="tremor-Select-arrowDownIcon flex-none h-5 w-5 text-tremor-content-subtle dark:text-dark-tremor-content-subtle"
                fill="currentColor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M11.9999 13.1714L16.9497 8.22168L18.3639 9.63589L11.9999 15.9999L5.63599 9.63589L7.0502 8.22168L11.9999 13.1714Z"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
